Added checkBracketsOrder method to StringUtils class; updated documentation